# apfelpilot

./: CLAUDE.md  README.md  pyproject.toml  setup.py
apfelpilot/: __main__.py  cli.py  client.py  context.py  executor.py  history.py  interactive.py  loop.py  tools.py
apfelpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
