[project]
name = "apfelpilot"
version = "0.1.0"
description = "Self-evolving Mac agent powered by apfel's on-device AI"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "click>=8.0"]

[project.scripts]
apfelpilot = "apfelpilot.cli:entry_point"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
